# limn

./: .gitignore  AGENTS.md  CLAUDE.md  LARGE_FILE_DECOMPOSITION_PROMPT.md  README.md  RELEASE_TESTING.md  UIUX_REVIEW_PROMPT.md  package-lock.json  package.json  playwright.config.ts  tsconfig.storage-test.json
.claude/skills/: beta-qa-tester  product-tester  release-limn
.github/workflows/: release.yml
docs/: architecture.md  cloud-sync.md  monetization-strategy.md  product-roadmap-notes.md
memory/: MEMORY.md  card-deep-links.md
qa-artifacts/: QA-REPORT.md
reports/: 2026-07-04-beta-qa-limn.md  2026-07-11-beta-qa-limn.md
scripts/: release-version.mjs
src/: App.tsx  ipc.ts  main.tsx  storage.ts  styles.css  testHarness.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: attachments.rs  lib.rs  main.rs  menu.rs  open_workspaces.rs  persist.rs  storage_hints.rs  tests.rs
src/components/: AttachmentImagePreview.tsx  AttachmentLightbox.tsx  BoardNav.tsx  BoardView.tsx  CardAttachments.tsx  CardComments.tsx  CardEditor.tsx  CardEditorEditSections.tsx  CardViewMode.tsx  CardViewPanel.tsx  ConflictReview.tsx  DueView.tsx  FilterView.tsx  InboxView.tsx  MembersView.tsx  MentionTextarea.tsx  RecurrenceControl.tsx  RichNoteText.tsx  SettingsView.tsx  TaskCard.tsx  WindowsTitlebar.tsx  WorkspaceChrome.tsx  WorkspaceTabs.tsx  contextMenu.tsx  dialogs.tsx  icons.tsx
src/lib/: attachments.ts  conflicts.ts  constants.ts  deepLink.ts  dueDate.ts  filter.ts  format.ts  (+14 more)
tests/: storage.test.mjs
(+43 files in other folders)
